fixed message size on mobile

--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,10 @@ footer {
         font-size: 1.5em;
         width: 80%;
     }
+    #message {
+        font-size: 1.5em;
+        width: 80%;
+    }
 
     #player-notifications {
         max-height: 50px;
